configuring-managing-kubernetes-networking-services-ingress/configuring-and-managing-application-access-with-ingress/demos/demos/demos_prior_to_1.19/ingress-namebased.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-namebased
spec:
  rules:
    - host: red.example.com
      http:
        paths:
        - backend:
            serviceName: hello-world-service-red
            servicePort: 4242
    - host: blue.example.com
      http:
        paths:
        - backend:
            serviceName: hello-world-service-blue
            servicePort: 4343
