configuring-managing-kubernetes-networking-services-ingress/configuring-and-managing-application-access-with-ingress/demos/demos/demos_prior_to_1.19/ingress-path.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-path
spec:
  rules:
    - host: path.example.com
      http:
        paths:
        - path: /red
          backend:
            serviceName: hello-world-service-red
            servicePort: 4242
        - path: /blue
          backend:
            serviceName: hello-world-service-blue
            servicePort: 4343
