configuring-managing-kubernetes-networking-services-ingress/configuring-and-managing-application-access-with-ingress/demos/demos/demos_prior_to_1.19/ingress-single.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-single
spec:
  backend:
    serviceName: hello-world-service-single
    servicePort: 80
