configuring-managing-kubernetes-networking-services-ingress/configuring-and-managing-application-access-with-ingress/demos/demos/demos_prior_to_1.19/ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-tls
spec:
  tls:
  - hosts:
    - tls.example.com
    secretName: tls-secret
  rules:
  - host: tls.example.com
    http:
      paths:
      - backend:
          serviceName: hello-world-service-single
          servicePort: 80
